--- a/public/css/icons.less
+++ b/public/css/icons.less
@@ -120,14 +120,20 @@
 }
 
 .icon-searchntalk:before { content: '\2001'}
+.icon-searchntalk-logo:before { content: '\2009'}
 .icon-search:before { content: '\2002'; }
 .icon-schedule:before { content: '\2003'; }
 .icon-pay:before { content: '\2004'; }
 .icon-talk:before { content: '\2005'; }
+.icon-marker:before { content: '\2008'; }
 .icon-cancel:before { content: '\e014'; }
 .icon-phone:before { content: '\e182'; }
+.icon-star:before { content: '\e006'; }
+.icon-list:before { content: '\e056'; }
 .icon-bill:before { content: '\e032'; }
 .icon-verified:before { content: '\e013'; }
 .icon-scheduler:before {content: '\e109'; }
 .icon-target:before {content: '\e165'; }
 .icon-left-arrow:before {content: '\e079'; }
+.icon-right-arrow:before {content: '\e080'; }
+.icon-clock:before { content: '\e023'; }
