--- a/views/callScheduling/rescheduling.jade
+++ b/views/callScheduling/rescheduling.jade
@@ -33,4 +33,5 @@ include ../scriptsAndStyles
                     input.btn.btn-primary(type='submit', value='Send')
 script.
     var call = JSON.parse( '!{JSON.stringify(call)}' );
+    var code = '!{code}';
 script(src='/js/app/callScheduling/rescheduling.js')
