--- a/views/callFlow/header.jade
+++ b/views/callFlow/header.jade
@@ -2,12 +2,12 @@ doctype html
 head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
     title Search-n-Talk Template Error Messaging
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
-    link(href='/css/style.css', rel='stylesheet')
+    //link(href='/css/style.css', rel='stylesheet')
     script(src='/js/lib/combined.js')
 .masthead(role='banner')
     .container
