--- a/views/dashboard/paymentComplete.jade
+++ b/views/dashboard/paymentComplete.jade
@@ -6,61 +6,107 @@ include ../callFlow/header
     .container
         .row
             .flowbar.col-xs-3.col-sm-3.col-md-12.col-lg-12
+                .shadow
                 ul.nav.nav-pills.nav-justified.nav-stacked
                     li.completed
                         a(href='')
-                            i.icon-schedule
-                            span.hidden-xs Schedule
+                            span.nav-label
+                                i.icon-schedule
+                                span.hidden-xs Schedule
                     li.completed
                         a(href='')
-                            i.icon-pay
-                            span.hidden-xs Pay
+                            span.nav-label
+                                i.icon-pay
+                                span.hidden-xs Pay
                     li.active
                         a(href='')
-                            i.icon-talk
-                            span.hidden-xs Talk
+                            span.nav-label
+                                i.icon-talk
+                                span.hidden-xs Talk
             // flowbar
             .content.col-xs-9.col-sm-9.col-md-12.col-lg-12
-                .row.messaging
-                    if error
-                        .alert.alert-danger
-                            strong Payment Failed!
-                            | #{error}
-                    else
-                        .alert.alert-success
-                            strong Payment Success!
-                            | Your call has been scheduled as per your request. A link to your call page has also been sent to your email address / cellphone via SMS.
-                            br
-                            br
-                            | You may use this page to manage this call.
-                .row.uneditables
+                .row
                     .col-md-6
-                        .row.user-profile
-                            .status-icon.status-ok
-                                i.icon-searchntalk
+                        .call-profile
+                            .hidden-xs.avatar
+                                .shadow
+                                    a(href=DashboardUrls.memberProfile(expert.id))
+                                        img(src=ApiUrlDelegate.userProfilePicture(user.id), width='100%', height='100%')
                             .info
                                 .user-displayname= formatName(user.first_name, user.last_name, user.title)
-                                .status-message accepting calls till 11.00am
+                                if (user.date_of_birth)
+                                    .user-age= moment().diff(moment(parseInt(user.date_of_birth)), 'years') + ' years'
                             .clearer
-                    .col-md-3
-                        .row
-                            .user-schedule-summary
-                                .current-status.status-ok Currently available
-                                .scheduled-slot
-                                    span.annotation Call scheduled for 15 mins:
-                                    | 13 Apr 2014 at
-                                    span.live-clock 10:30
-                                .scheduled-slot
-                                    span.annotation Total Cost:
-                                    | $16.50
-                            .user-call-summary
-                                .agenda
-                                    span.annotation Agenda:
-                                    | To discuss the impact of the new government on social policy issues.
-                    .col-md-3
-                        .row.step-reversal
-                            a.btn.btn-danger(href='index.html')
-                                | Cancel Call
-                                i.icon-cancel
+                            .meta.meta-price
+                                h5 Charges
+                                p
+                                    if expert.schedule[0].price_per_min
+                                        strong= formatMoney(expert.schedule[0].price_per_min, expert.schedule[0].price_unit)
+                                        | /min.
+                                    else
+                                        strong Free
+                            .meta.meta-schedule
+                                h5 Schedule
+                                ul
+                                    li.schedule-a= formatDate(appointments[0], 'ddd DD MMM YYYY, hh:mm a')
+                                    li.schedule-b= formatDate(appointments[1], 'ddd DD MMM YYYY, hh:mm a')
+                                    li.schedule-c= formatDate(appointments[2], 'ddd DD MMM YYYY, hh:mm a')
+                            .meta
+                                h5 Call Recepient
+                                p +91-#{caller-phone}
+                            .meta
+                                h5 Call Agenda
+                                p #{phoneCall.agenda}
+                    .col-md-6
+                        .call-card
+                            if error
+                                .call-status
+                                    .alert.alert-danger
+                                        strong Sorry!
+                                        | &nbsp;We couldn't schedule the call because&nbsp;
+                                        strong #{error}
+                                        br
+                                        br
+                                        | You may try again with a new schedule.
+                                .call-reversal
+                                    a.btn.btn-default(href='index.html')
+                                        | Back to Schedule
+                                        i.icon-left-arrow
+                            else
+                                .call-status
+                                    .alert.alert-success
+                                        strong Payment Success!
+                                        | Your call has been scheduled as per your request.
+                                        br
+                                        br
+                                        | You may use this page to manage this call.
+                            if !error
+                                .payment-summary.call-inputs
+                                    h1
+                                        i.icon-bill
+                                        | Payment Summary
+                                    .table
+                                        - var total = 0, currency
+                                            each line in transactionLines
+                                                - total += line.amount
+                                                - currency = line.amount_unit
+                                                .table-row
+                                                    case line.transaction_type
+                                                        when 1
+                                                            .table-cell.title Call duration: #{duration} mins @ #{formatMoney(expert.schedule[0].price_per_min, expert.schedule[0].price_unit)} / min
+                                                        when 2
+                                                            .table-cell.title Network charges
+                                                        when 3
+                                                            .table-cell.title Tax @#{Config.get(Config.CALL_TAX_PERCENT)}%
+                                                        when 4
+                                                            .table-cell.title Discount
+                                                    .table-cell.amount= formatMoney(line.amount, line.amount_unit)
+                                        .table-row.total
+                                            .table-cell.title Total
+                                            .table-cell.amount= formatMoney(total, currency)
+                                .call-reversal
+                                    a.btn.btn-danger(href='index.html')
+                                        | Cancel Call
+                                        i.icon-cancel
             // /.content
 include ../callFlow/footer
