country code selection in call flow

--- a/views/callFlow/payment.jade
+++ b/views/callFlow/payment.jade
@@ -49,14 +49,14 @@ include header
                                     else
                                         strong Free
                             .meta.meta-schedule
-                                h5 Schedule
+                                h5 Selected time slots
                                 ul
                                     li.schedule-a= formatDate(appointments[0], 'ddd DD MMM YYYY, hh:mm a')
                                     li.schedule-b= formatDate(appointments[1], 'ddd DD MMM YYYY, hh:mm a')
                                     li.schedule-c= formatDate(appointments[2], 'ddd DD MMM YYYY, hh:mm a')
                             .meta
                                 h5 Call Recepient
-                                p +91-#{caller-phone}
+                                p +#{country_code}-#{caller_phone}
                             .meta
                                 h5 Call Agenda
                                 p= phoneCall.agenda
