--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -192,9 +192,9 @@ include header
                                     .form-group
                                         .row
                                             .col-xs-4
-                                                select.form-control.country-code
+                                                select.form-control#country-code
                                                     for code,country in CountryCode
-                                                        option(value=country)= CountryName[code.toUpperCase()] + ' (+' + country + ')'
+                                                        option(value=country, selected=code == country_code)= CountryName[code.toUpperCase()] + ' (+' + country + ')'
                                             .col-xs-8
                                                 input.form-control.phone-number#caller-phone(type='text', placeholder='Phone Number', value=caller_phone)
                                 .row.input-row
