--- a/views/dashboard/memberEmployment.jade
+++ b/views/dashboard/memberEmployment.jade
@@ -55,7 +55,7 @@
                             input.form-control#end_date(class="datepicker")
                     br
                     label.control-label(for='summary') Summary
-                    textarea.form-control#summary(type='text', name='summary', data-toggle="tooltip", data-placement="bottom")
+                    textarea.form-control#summary(type='text', name='summary', data-toggle="tooltip", data-placement="bottom", rows="6")
                     br
                     label.control-label(for='is_current') Is Current? &nbsp&nbsp
                     select#is_current(name='is_current', data-width='auto')
