--- a/views/memberRegistration/authorize.jade
+++ b/views/memberRegistration/authorize.jade
@@ -1,15 +1,12 @@
 title SnT | #{integration.title} | #{formatRole(member.role)} registration
 include ../scriptsAndStyles
-    include header
-        .container-fluid
-        .row-fluid
-            .col-md-2
-            .col-md-8
-                p By registering as an expert for #{integration.title}, you also agree to <a href='#'>SearchNTalk.com Terms and Conditions</a>
-                p You will receive requests for scheduling phone calls from people who are seeking your expert advice.
-                form(action=MemberRegistrationUrls.authorizationDecision(), method="post")
-                    input(name="transaction_id", type="hidden", value="#{transactionID}")
-                    .controls
-                        input.btn-primary.btn(type="submit" value="Yes, Continue" id="allow")
-                        input.btn.btn-danger(type="submit", value="Deny", name="cancel", id="deny")
-            .col-md-2
+extends header
+block content
+    .row-fluid
+            p By registering as an expert for #{integration.title}, you also agree to <a href='#'>SearchNTalk.com Terms and Conditions</a>
+            p You will receive requests for scheduling phone calls from people who are seeking your expert advice.
+            form(action=MemberRegistrationUrls.authorizationDecision(), method="post")
+                input(name="transaction_id", type="hidden", value="#{transactionID}")
+                .controls
+                    input.btn-primary.btn(type="submit" value="Yes, Continue" id="allow")
+                    input.btn.btn-danger(type="submit", value="Deny", name="cancel", id="deny")
